--- a/task6/index.html
+++ b/task6/index.html
@@ -19,11 +19,88 @@
             <div class="main_picture_right"></div>
         </div>
         <div class="main_float_right">
-            <div class="main_float_right_words">
-                ABOUT
+            <p class="main_float_right_words">
+                about
+            </p>
+            <p class="main_float_right_words">
+                technology
+            </p>
+            <div class="main_float_right_little_words">about technology about technology about technology</div>
+            <div class="main_float_right_number">
+                700
             </div>
-            <div class="main_float_right_words">
-                TECHNOLOGE
+            <div class="main_float_right_little_number">
+                <span class="main_float_right_little_number_first">3.2</span>
+                <span class="main_float_right_little_number_second">css</span>
+                <span class="main_float_right_little_number_third">csssscsscss</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- div.middle -->
+    <div class="middle">
+        <div class="what">
+            <div class="what_header">what</div>
+            <div class="middle_content">whatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwhatwh</div>
+        </div>
+        <div class="when">
+            <div class="when_header">when</div>
+            <div class="middle_content">中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文中文</div>
+        </div>
+        <div class="how">
+            <div class="how_header">how</div>
+            <div class="middle_content">howhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowhowh
+                <div class="how_content_sum">
+                    <span>what-----40%</span>
+                    <span>what-----40%</span>
+                    <span>what-----40%</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- div.bottom -->
+    <div class="bottom">
+        <div class="bottom_left">
+            <div class="bottom_left_up">
+                <span class='bottom_left_up_title'><span>the</span> technology of front</span>
+                <span class='bottom_left_up_sub_title'>前端技术领域</span>
+            </div>
+
+            <div class="bottom_left_down">
+                <div class="text_content">
+                    <p class='p_no_indent'>
+                    <span>前</span>端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+                    <img src="images/cat.jpg">
+                    <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+                    <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom_right">
+            <div class="bottom_right_pic">
+                <div class="bottom_right_pic_cover">
+                    <div class="bottom_right_pic_cover_words">
+                        <span>前端技术<span>前端技术前端技术</span></span>
+                    </div>
+                </div>
+            </div>
+            <!-- <img src="images/cat_458x275.jpg"> -->
+            <div class="bottom_right_down">
+                <div class="words_row"><div class="arrow_up"></div>前端前端前端.................前端</div>
+                <div class="words_row"><div class="arrow_up"></div>前端前端前端.................前端</div>
+                <div class="words_row"><div class="arrow_up"></div>前端前端前端.................前端</div>
+
+                <div class="bottom_right_down_left_corner">
+                    <div class="left">0</div>
+                    <div class="right">
+                        <span class=first_row>bottom_right_down_left_corner</span>
+                        <span class=second_row>hello world hello world</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
